--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .landing {
 	position: relative;
-	background: url('./assets/bg-auth.jpg') no-repeat center center/cover;
+	background: url('./assets/bg-aut.jpg') no-repeat center center/cover;
 	height: 100vh;
 }
 
