--- a/frontend/src/components/layout/nav/Navbar.css
+++ b/frontend/src/components/layout/nav/Navbar.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-bodu {
+body {
   font-family : 'Roboto', sans-serif;
   background: #fff;
 
@@ -15,6 +15,13 @@ i {
   margin-right: 10px;
 }
 
+.navbar {
+  position: fixed;
+  z-index: 1;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+}
 .navbar-logo {
   padding: 15px;
   color: #fff;
@@ -25,6 +32,6 @@ i {
   background-color: #000000;
   padding: 0px;
 }
-li.right{
-    float: right;
+.navbar-list {
+  justify-content: space-between;
 }
